src/objects/Vehicle_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>ToBeActioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be read only, will be set by the system automatically in case an activity of type “Change Owner” will be saved and is linked to a vehicle relationship.
This field is visible for Wholesale and Retail.</description>
        <label>To Be Actioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TradeIn_Make__c</fullName>
        <label>TradeIn Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeIn_Model__c</fullName>
        <label>TradeIn Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeIn_Year__c</fullName>
        <label>TradeIn Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TradeIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TradeIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <formula>Vehicle_ID__r.UsVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UsVIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsedWarranty_Apply_Date__c</fullName>
        <label>UsedWarranty Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UsedWarranty_Apply_NDCode__c</fullName>
        <label>UsedWarranty Apply NDCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsedWarranty_Apply_Status__c</fullName>
        <label>Used Warranty Apply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsedWarranty_Apply_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UsedWarranty Apply User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN_Search__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity_Date__c</fullName>
        <label>Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Validity&quot;</description>
        <label>Validity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Address_Display__c</fullName>
        <label>Vehicle Address Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Amount__c</fullName>
        <label>Vehicle Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Brand__c)</formula>
        <label>Vehicle Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <formula>IF( MD__c = &apos;JP&apos;, Vehicle_ID__r.Class_and_Body__c , TEXT(Vehicle_ID__r.Class__c))</formula>
        <label>Vehicle Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: ID of vehicle in CRM 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot;VehicleRel_VehicleID&quot;</description>
        <label>Vehicle ID</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Relationships</relationshipLabel>
        <relationshipName>Vehicle_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Vehicle_ID__r.Model_Description__c</formula>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Phone__c</fullName>
        <label>Vehicle Tel</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Phone_picklist__c</fullName>
        <label>vehicle tel picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Range__c</fullName>
        <formula>Vehicle_ID__r.Range__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status__c</fullName>
        <formula>TEXT( Vehicle_ID__r.VehicleStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Apply_Date__c</fullName>
        <label>Warranty Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Apply_NDCode__c</fullName>
        <label>Warranty Apply NDCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Apply_Status__c</fullName>
        <label>Warranty Apply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Apply_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Apply User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry_Date__c</fullName>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry__c</fullName>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Auto__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Web Auto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_MB__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Web MB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Word_Mouth__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Word/Mouth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Of_Manufacture__c</fullName>
        <formula>TEXT( Vehicle_ID__r.ModelYear__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Of Manufacture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Address__c.Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vehicle_address_picklist__c</fullName>
        <label>vehicle address picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Address</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other Address 1</fullName>
                </value>
                <value>
                    <fullName>Other Address 2</fullName>
                </value>
                <value>
                    <fullName>Other Address 3</fullName>
                </value>
                <value>
                    <fullName>Work address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vehicle_fax__c</fullName>
        <label>Vehicle Fax</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_fax_picklist__c</fullName>
        <label>vehicle fax picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>Work FAX</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vehicle_mail__c</fullName>
        <label>Vehicle Mail</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_mail_picklist__c</fullName>
        <label>vehicle mail picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Home</fullName>
                </value>
                <value>
                    <fullName>Email Work</fullName>
                </value>
                <value>
                    <fullName>MyMercedes Email</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vehicle Relationship</label>
    <listViews>
        <fullName>All_Vehicle_Relationships</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Vehicle Relationships</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBK01Ehq</group>
            <group>MBK09Shq</group>
            <group>MBK11Whq</group>
            <group>MBK17Whq</group>
            <group>MBK30Whq</group>
            <group>MBK31Shq</group>
            <group>MBK41Fhq</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_New_Vehicle_Relationship</fullName>
        <columns>NAME</columns>
        <columns>Validity__c</columns>
        <columns>Contact__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Selling_Dealer__c</columns>
        <columns>Registration_Number__c</columns>
        <columns>Vehicle_Brand__c</columns>
        <columns>Vehicle_Class__c</columns>
        <columns>Vehicle_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>MBK New Vehicle Relationship</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Created_Vehicle_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Validity__c</columns>
        <columns>Contact__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>Selling_Dealer__c</columns>
        <columns>Registration_Number__c</columns>
        <columns>Vehicle_Brand__c</columns>
        <columns>Vehicle_Class__c</columns>
        <columns>Vehicle_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New vehicles</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000000000}</displayFormat>
        <label>VehicleRel No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Relationship</pluralLabel>
    <recordTypes>
        <fullName>Vehicle_Relationship</fullName>
        <active>true</active>
        <description>Active vehicle relationship</description>
        <label>Vehicle Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Relationship_Retail</fullName>
        <active>true</active>
        <label>Vehicle Relationship Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Relationship_Soft_Deleted</fullName>
        <active>true</active>
        <description>Soft deleted vehicle relationship</description>
        <label>Vehicle Relationship Soft Deleted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Retail_Vehicle_Relationship_Share__c</fullName>
        <label>Retail Vehicle Relationship Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>End_Date_Cannot_be_deleted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISNEW(), ISCHANGED( End_Date__c ), ISNULL( End_Date__c ), MD__c = &apos;JP&apos; , $Profile.Name != &apos;IntegrationAPI&apos;, $Profile.Name != &apos;Japan IT Department&apos;, $Profile.Name != &apos;Japan Data Management&apos;)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date Cannot be deleted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Reason_Required</fullName>
        <active>true</active>
        <description>&quot;End date is not null
AND End reason is null&quot;</description>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;, NOT(ISNULL(End_Date__c)), ISPICKVAL( End_Reason__c ,&apos;&apos;),OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;))</errorConditionFormula>
        <errorDisplayField>End_Reason__c</errorDisplayField>
        <errorMessage>Once end date has been set for the vehicle relationship, the end reason must be entered.</errorMessage>
    </validationRules>
</CustomObject>